--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -9,14 +9,9 @@
               integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
               rel="stylesheet">
         <link href="style.css" rel="stylesheet">
-        <script>
-            $(document).ready(function () {
-                $('#datepicker').datepicker();
-            });
-        </script>
     </head>
     <body>
-        <h1>자유 게시판 - 목록</h1>
+        <h1>자유 게시판</h1>
 
         <form action="" class="filter" method="get">
             <div class="reg_date">
