chore : 파일 위치 이동

--- a/src/main/webapp/HTML/passwordVerify.html
+++ b/src/main/webapp/HTML/passwordVerify.html
@@ -6,7 +6,7 @@
         <title>자유 게시판</title>
         <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
         <!-- 공통 CSS -->
-        <link href="style.css" rel="stylesheet">
+        <link href="../style.css" rel="stylesheet">
 
         <script>
             $(document).ready(function () {
@@ -88,63 +88,12 @@
         </script>
     </head>
     <body>
-        <h2>게시글 작성</h2>
         <div>
-            <div class="caption">
-                <span class="t_red">*</span> 표시는 필수입력 항목입니다.
-            </div>
             <table class="post_table">
                 <tbody id="tbody">
                 <tr>
-                    <th scope="row">카테고리<span class="t_red">*</span></th>
-                    <td>
-                        <select class="tbox01" id="category" name="category">
-                            <option value="all">카테고리 선택</option>
-                            <option value="java">Java</option>
-                            <option value="javascript">JavaScript</option>
-                            <option value="database">DataBase</option>
-                        </select>
-                    </td>
-                </tr>
-                <tr>
-                    <th scope="row">작성자<span class="t_red">*</span></th>
-                    <td><input class="tbox01" id="board_subject" name="board_subject" value=""/></td>
-                </tr>
-                <tr>
                     <th scope="row">비밀번호<span class="t_red">*</span></th>
-                    <td><input class="tbox01" id="password_first" placeholder="비밀번호" value=""/>
-                        <input class="tbox01" id="password_second" placeholder="비밀번호 확인" value=""/></td>
-                </tr>
-                <tr>
-                    <th scope="row">제목<span class="t_red">*</span></th>
-                    <td><input class="tbox01" id="board_writer" name="board_writer" value=""/></td>
-                </tr>
-                <tr>
-                    <th scope="row">내용<span class="t_red">*</span></th>
-                    <td><textarea class="textarea01" id="board_content" name="board_content"></textarea></td>
-                </tr>
-                <tr>
-                    <th scope="row">파일첨부</th>
-                    <td>
-                        <div class="file-upload">
-                            <input class="upload-name" disabled="disabled" type="text" value="파일선택">
-
-                            <label for="ex_filename_1">파일 찾기</label>
-                            <input class="upload-hidden" id="ex_filename_1" type="file">
-                        </div>
-                        <div class="file-upload">
-                            <input class="upload-name" disabled="disabled" type="text" value="파일선택">
-
-                            <label for="ex_filename_2">파일 찾기</label>
-                            <input class="upload-hidden" id="ex_filename_2" type="file">
-                        </div>
-                        <div class="file-upload">
-                            <input class="upload-name" disabled="disabled" type="text" value="파일선택">
-
-                            <label for="ex_filename_3">파일 찾기</label>
-                            <input class="upload-hidden" id="ex_filename_3" type="file">
-                        </div>
-                    </td>
+                    <td><input class="tbox01" id="password_first" placeholder="비밀번호" value=""/></td>
                 </tr>
                 </tbody>
             </table>
