--- a/src/main/webapp/HTML/detail.html
+++ b/src/main/webapp/HTML/detail.html
@@ -8,7 +8,7 @@
               href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
               integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
               rel="stylesheet">
-        <link href="style.css" rel="stylesheet">
+        <link href="../style.css" rel="stylesheet">
     </head>
     <body>
         <div class="detail_info_box">
@@ -75,7 +75,7 @@
             <button id="edit_btn">수정</button>
             <button id="delete_btn">삭제</button>
         </div>
-        
+
         <script crossorigin="anonymous"
                 integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
                 src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
