--- a/src/main/webapp/HTML/detail.html
+++ b/src/main/webapp/HTML/detail.html
@@ -56,11 +56,11 @@
                 <a href="http://">첨부파일1.hwp</a>
             </div>
         </div>
-        <div class="detail_reply_box">
+        <div class="detail_comment_box">
             <div class="reply">
                 <div id="reg_date">2020.03.09 16:32</div>
                 <div id="content">댓글이 출력됩니다.</div>
-                <hr id="reply_bot_line">
+                <hr id="comment_bot_line">
             </div>
             <div class="reply_input_box">
                 <input id="input_box" placeholder="댓글을 입력해주세요" type="text">
